# ai_research_agent

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
api/: routes.py
core/: agents.py  graph.py  ingestion.py  populate.py  retrieval.py
database/: connections.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
