[project]
name = "ai-research-genai"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "fastembed>=0.2.6",
    "instructor>=1.0.0",
    "langchain>=0.1.13",
    "langchain-community>=0.0.29",
    "langchain-core>=0.1.33",
    "langchain-groq>=1.1.3",
    "langchain-openai>=0.1.1",
    "langchain-text-splitters>=0.0.1",
    "langgraph>=0.0.27",
    "neo4j>=5.18.0",
    "pydantic>=2.6.4",
    "pypdf>=4.1.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.8.0",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.27.1",
]
